[package]
name = "cs6120"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bril-rs = { path = "bril/bril-rs", features = ["memory", "float", "ssa", "speculate"] }
serde_json = "1.0"
rand = "0.8.3"
